2006-12-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): fixed bug 1609279
	* .version: bumped to 2.6.2 because a) it's been a while
	  b) the linker sources have moved c) the preprocessor is upgraded

2006-12-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/snprintf.c: some checks
	* lib/src/printf_large.c: %bc: read char instead of int from stack

2006-12-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/cc2430.h: inserted _XPAGE

2006-12-02 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2430.h: added

2006-12-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/default/features.h,
	* device/include/asm/ds390/features.h,
	* device/include/mcs51/at89s53.h,
	* device/include/ser.h,
	* device/include/ser_ir.h,
	* device/include/serial.h: changed keywords to double underscore variants,
	  fixes bug 1590261 some more, thanks Steven Borley

2006-12-01 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (register_reassign): do not crash on recursive code
	  but emit warning (recursion is not supported for pic14)

2006-11-30 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added 101.a,b (moves to int/long xdata)
	* doc/sdccman.lyx: various small changes, acknowledged Sourceforge

2006-11-30 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (dump_sfr): always emit symbols
	* src/pic/glue.c (pic14printPublics): fixed typo

2006-11-30 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (create_pic,ram_map): add memRange entries to PIC
	  (pic14_getSharebankSize, pic14_getSharebankAddress): replaced with
	  (pic14_hasSharebank,pic14_isShared,pic14_allRAMShared,
	   pic14_getSharedStack): NEW, evaluate the memRange entries to locate
	   a sharebank, use a non-shared bank for the stack if none available
	* src/pic/device.h (struct memRange): added linked list next field,
	  added prototypes for above functions