@@ -82,7 +82,7 @@ SDCC Compiler User Guide
 
 
 \size normal 
-SDCC 2.6.1
+SDCC 2.6.2
 \size footnotesize 
 
 \newline 
