@@ -1,6 +1,8 @@
 2006-12-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
+	* src/SDCCsymt.c (addDecl): fixed bug 1609244
 	* src/SDCCmain.c (linkEdit): fixed bug 1609279
+	* doc/sdccman.lyx,
 	* .version: bumped to 2.6.2 because a) it's been a while
 	  b) the linker sources have moved c) the preprocessor is upgraded
 
